test/files/neg/t5753/Impls_Macros_1.scala
// scalac: -language:experimental.macros
import scala.reflect.macros.blackbox.Context

trait Impls {
  def impl(c: Context)(x: c.Expr[Any]) = x
}

